feat(config): Remove sensitive data from configuration file
移除配置文件中的数据库和Redis密码字段，改为通过环境变量传入，提升安全性。

--- a/user/configs/config.yaml
+++ b/user/configs/config.yaml
@@ -9,12 +9,10 @@ data:
   database:
     driver: mysql
     host: 127.0.0.1
-    port: 3306
-    database: test
+    port: 33060
+    database: user_service
     username: root
-    password: ""
   redis:
-    addr: 127.0.0.1:6379
-    password: ""
+    addr: 127.0.0.1:34701
     read_timeout: 0.2s
     write_timeout: 0.2s
