--- a/user/Makefile
+++ b/user/Makefile
@@ -22,6 +22,7 @@ init:
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 	go install github.com/go-kratos/kratos/cmd/kratos/v2@latest
 	go install github.com/go-kratos/kratos/cmd/protoc-gen-go-http/v2@latest
+	go install github.com/go-kratos/kratos/cmd/protoc-gen-go-errors/v2@latest
 	go install github.com/google/gnostic/cmd/protoc-gen-openapi@latest
 	go install github.com/google/wire/cmd/wire@latest
 
@@ -41,8 +42,17 @@ api:
  	       --go_out=paths=source_relative:./api \
  	       --go-http_out=paths=source_relative:./api \
  	       --go-grpc_out=paths=source_relative:./api \
+	       --go-errors_out=paths=source_relative:./api \
 	       --openapi_out=fq_schema_naming=true,default_response=false:. \
 	       $(API_PROTO_FILES)
+
+.PHONY: errors
+# generate error code
+errors:
+	protoc --proto_path=./api \
+	       --proto_path=./third_party \
+	       --go-errors_out=paths=source_relative:./api \
+	       api/user/v1/error_reason.proto
 
 .PHONY: build
 # build
