refactor: Rewrite README for user auth service with comprehensive docs

--- a/user/configs/config.yaml
+++ b/user/configs/config.yaml
@@ -18,6 +18,12 @@ data:
     write_timeout: 0.2s
 trace:
   endpoint: http://localhost:14268/api/traces
-  service_name: user-service
+  service_name: auth-service
   sampler: 1.0
   batcher: jaeger
+email:
+  sender_name: "用户系统"        # 邮件发件人显示名称
+  sender_email: "noreply@example.com"  # 发件人邮箱地址
+  support_email: "support@example.com" # 客服支持邮箱
+  company_name: "您的公司名称"   # 公司名称
+  app_name: "您的应用名称"       # 应用名称
